package com.example.mainactivity;

public class FavoriteData {
    private String favor_id;





    public String getFavor_id(){
        return favor_id;
    }




    public void setFavor_id(String favor_id) {
        this.favor_id = favor_id;
    }
}
